# NxCoreApi002OptionHeaderSpin

./: README.md
NxCoreApiOptionHeaderSpin/: CMakeLists.txt  qb.sh  run.sh
NxCoreApiOptionHeaderSpin/src/: main.cpp  nxcoreCallback.cpp  nxcore_global.cpp  processNxCoreStatusMessage.cpp  processNxCoreSymbolSpinMessage.cpp
NxCoreApiOptionHeaderSpin/src/srcinc/: processNxCoreStatusMessage.hpp  processNxCoreSymbolSpinMessage.hpp
